<resources>

    <string name="app_name">Statistics and Probability</string>

    <string name="read_write_exception_mode_1_text">Unable to access internal storage</string>
    <string name="read_write_exception_mode_1_text_message_1">You can continue using the app normally, but it will start with a blank list, and that list won\'t be saved when you exit the app.</string>
    <string name="read_write_exception_mode_1_text_message_2">You can continue using the app normally, but it will start with a blank list, and that list won\'t be saved when you exit the app.&lt;br/&gt;&lt;br/&gt;(Btw, the app also failed to save your list at the end of the previous session.)</string>

    <string name="read_write_exception_mode_2_text">The app\'s internally saved file for your list is corrupt.</string>
    <string name="read_write_exception_mode_2_text_message">If you are seeing this message, you have most likely intentionally triggered the error and you know how to fix it ;)</string>

    <string name="read_write_exception_mode_3_text">Previous session was unable to save list</string>
    <string name="read_write_exception_mode_3_text_message">The app encountered a failure when trying to save the list in the previous session. The latest available saved list (%1$s) will be loaded.</string>
    <string name="read_write_exception_mode_3_timestamp_format">dd-MM-yyyy HH:mm:ss z</string>

    <string name="ok">OK</string>
    <string name="proceed">Proceed</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="name">name</string>
    <string name="birth_date">birth date</string>
    <string name="age">birth date</string>
    <string name="shoe_size">shoe size</string>
    <string name="height">height</string>

    <string name="override_validation_text">Override validation</string>
    <string name="override_validation_text_specific">Override %1$s validation</string>

    <string name="clear_list_text">Clear list</string>
    <string name="clear_list_text_message">Are you sure you want to clear the list?</string>

    <string name="import_list_text">Import list from CSV</string>
    <string name="export_list_text">Export list to CSV</string>

    <string name="name_input_field_text">Name</string>

    <string name="birth_date_input_field_text">Birthdate</string>
    <string name="age_input_field_text">Age</string>

    <string name="birth_date_age_switch_text">Enter as age</string>

    <string name="shoe_size_input_field_text">Shoe size</string>
    <string name="height_input_field_text">Height (in cm)</string>

    <string name="add_button_text">Add</string>
    <string name="add_button_text_alt">Add&lt;br/&gt;%1$d</string>

    <string name="number_picker_dialog_text_person_instances">How many?</string>

    <string name="same_name_dialog_text">You are about to create %1$d people with identical names.</string>
    <string name="same_name_dialog_text_message">You are about to create %1$d people named %2$s.&lt;br/&gt;Do you wish to proceed?</string>

    <string name="auto_fields_button_text_on">Auto fields\nenabled</string>
    <string name="auto_fields_button_text_off">Auto fields\ndisabled</string>

    <string name="sort_button_description_text">Sort people by</string>

    <string name="original_sort_text">None</string>
    <string name="name_sort_text">Name</string>
    <string name="age_sort_text">Age</string>
    <string name="shoe_size_sort_text">Shoe size</string>
    <string name="height_sort_text">Height</string>

    <string name="one_field_empty">Please specify %1$s.</string>
    <string name="two_fields_empty">Please specify %1$s and %2$s.</string>
    <string name="three_fields_empty">Please specify %1$s, %2$s and %3$s.</string>
    <string name="four_fields_empty">Please specify person data in fields.</string>

    <string name="no_last_name">The name must consist of a first and a last name.</string>
    <string name="suspicious_patterns_in_name">The name contains suspicious patterns.</string>
    <string name="invalid_characters_in_name">The name contains invalid characters.</string>

    <string name="unknown_date_format">The format of the date could not be recognized.</string>
    <string name="invalid_date">Dates in the future are invalid.</string>

    <string name="invalid_shoe_size_too_small">Shoe size is too small.</string>
    <string name="invalid_shoe_size_too_big">Shoe size is too big.</string>

    <string name="invalid_height_too_short">Height value is too small.</string>
    <string name="invalid_height_too_tall">Height value is too big.</string>

    <string name="list_view_item_person_details_string">age %1$d years, shoe size %2$d, height %3$d cm</string>

    <string name="n_a">N/A</string>

    <string name="minimum_text">minimum</string>
    <string name="maximum_text">maximum</string>
    <string name="average_text">average</string>
    <string name="standard_deviation_text">standard deviation</string>
    <string name="lower_quartile_text">lower quartile</string>
    <string name="median_text">median</string>
    <string name="upper_quartile_text">upper quartile</string>
    <string name="interquartile_range_text">interquartile range</string>

    <string name="no_data">no data to display</string>
    <string name="linear_regression_line_formula_positive_b">y = %1$sx + %2$s</string>
    <string name="linear_regression_line_formula_no_b">y = %1$sx</string>
    <string name="linear_regression_line_formula_negative_b">y = %1$sx - %2$s</string>
    <string name="linear_regression_line_text">linear regression line</string>
    <string name="correlation_coefficient_text">correlation coefficient</string>

</resources>
