<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/collection_management_root_layout"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.giljam.daniel.averageandstatisticaldispersion.PersonDataManagementFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name_input_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_input_field_text"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:inputType="textPersonName|textCapWords"
                    android:nextFocusDown="@id/birthdate_age_input_field"
                    android:nextFocusForward="@id/birthdate_age_input_field"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/birthdate_age_input_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="6"
                        android:hint="@string/birth_date_input_field_text"
                        android:imeOptions="actionDone|flagNoExtractUi"
                        android:inputType="date"
                        android:nextFocusDown="@id/shoe_size_input_field"
                        android:nextFocusForward="@id/shoe_size_input_field"
                        android:selectAllOnFocus="true"
                        android:singleLine="true" />

                    <Switch
                        android:id="@+id/birthdate_age_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:paddingEnd="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingStart="8dp"
                        android:switchPadding="8dp"
                        android:text="@string/birth_date_age_switch_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/shoe_size_input_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="6"
                        android:hint="@string/shoe_size_input_field_text"
                        android:imeOptions="actionDone|flagNoExtractUi"
                        android:inputType="number"
                        android:nextFocusDown="@id/height_input_field"
                        android:nextFocusForward="@id/height_input_field"
                        android:selectAllOnFocus="true"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/height_input_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:ems="6"
                        android:hint="@string/height_input_field_text"
                        android:imeOptions="actionDone|flagNoExtractUi"
                        android:inputType="number"
                        android:nextFocusDown="@id/name_input_field"
                        android:nextFocusForward="@id/name_input_field"
                        android:selectAllOnFocus="true"
                        android:singleLine="true" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:nextFocusDown="@id/name_input_field"
                android:nextFocusForward="@id/name_input_field"
                android:text="@string/add_button_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/sort_button_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:text="@string/sort_button_description_text"
                android:textAppearance="@android:style/TextAppearance.Material" />

            <ToggleButton
                android:id="@+id/sort_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textOff="@string/original_sort_text" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/people"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</FrameLayout>
